Fix scrollbar shifting content

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
 html,
 body {
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+  scrollbar-gutter: stable both-edges;
 }
 
 :root {
